--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,12 @@
 {
   "name": "HarDil",
   "short_name": "HarDil",
-  "start_url": "splash.html",
+  "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#667eea"
+  "background_color": "#050812",
+  "theme_color": "#050812",
+  "icons": [
+    { "src": "icons/192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/512.png", "sizes": "512x512", "type": "image/png" }
+  ]
 }
