--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
   "name": "HarDil",
   "short_name": "HarDil",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
-  "background_color": "#050812",
-  "theme_color": "#050812",
+  "background_color": "#020617",
+  "theme_color": "#020617",
   "icons": [
-    { "src": "icons/192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
