--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,28 @@
 {
   "name": "HarDil",
   "short_name": "HarDil",
+  "description": "Family First · One Place for Everything",
   "start_url": "./index.html",
   "scope": "./",
   "display": "standalone",
+  "display_override": ["window-controls-overlay", "standalone"],
   "background_color": "#020617",
   "theme_color": "#020617",
+  "orientation": "portrait",
+  "categories": ["utilities", "productivity", "lifestyle"],
   "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
-  ]
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "iarc_rating_id": "e10+"
 }
